--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Kawa</string>
+    <string name="menu_product">Product</string>
+    <string name="menu_download">Download</string>
+    <string name="menu_pricing">Pricing</string>
 </resources>
